@@ -10,6 +10,7 @@ import lombok.NoArgsConstructor;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.Id;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -31,7 +32,7 @@ public class Conversation {
 
     public static List<Conversation> createConversations(MessageDto messageDto) {
         String uuid = UUID.randomUUID().toString();
-        return List.of(Conversation.builder().recipient(messageDto.getRecipientId()).sender(messageDto.getSenderId()).uuid(uuid).build(),
+        return Arrays.asList(Conversation.builder().recipient(messageDto.getRecipientId()).sender(messageDto.getSenderId()).uuid(uuid).build(),
                 Conversation.builder().recipient(messageDto.getSenderId()).sender(messageDto.getRecipientId()).uuid(uuid).build());
     }
 }
